Dodani funkcionalni zahtjevi 1-14

--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -125,7 +125,7 @@
 					\begin{packed_item}
 	
 						\item \textbf{Glavni sudionik: } Korisnik
-						\item  \textbf{Cilj:} Dobiti pristup korisnickom sučelju
+						\item  \textbf{Cilj:} Dobiti pristup korisničkom sučelju
 						\item  \textbf{Sudionici:} Baza podataka
 						\item  \textbf{Preduvjet:} Registracija
 						\item  \textbf{Opis osnovnog tijeka:}
