Dodani funkcionalni zahtjevi 1-14

--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -393,7 +393,7 @@
 						\item[] \begin{packed_enum}
 	
 							\item Korisnik odabire opciju "Natjecanja"
-							\item Korisnik se prenosi na stranicu s kalendarom i listom natjecanja
+							\item Sustav prenosi korisnika na stranicu s kalendarom i listom natjecanja
 						\end{packed_enum}
 						
 						
