--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -12,12 +12,13 @@
 			}
 			\hline
 			\textbf{Rev.}	& \textbf{Opis promjene/dodatka} & \textbf{Autori} & \textbf{Datum}\\[3pt] \hline
-			0.1 & Napravljen predložak.	& * & 26.10.2021. 		\\[3pt] \hline
-			0.2 & Napravljen opis projekta	& * & 7.11.2021. 		\\[3pt] \hline
+			0.1 & Napravljen predložak.	& Marko Damjanić & 26.10.2021. 		\\[3pt] \hline
+			0.2 & Napravljen opis projekta	& Marko Damjanić & 7.11.2021. 		\\[3pt] \hline
 			0.3 & Dodano u 3.1 : dionici i aktori & Fran Jelavić & 16.11.2021. 		\\[3pt] \hline
 			0.4 & Dodano u 4 : uvod & Fran Jelavić & 16.11.2021. 		\\[3pt] \hline
 			0.5 & Dodano u 3.11 : opis obrazaca uporabe & Luka Maros & 16.11.2021. 		\\[3pt] \hline
 			0.6 & Dodano u 3.11 : opis obrazaca uporabe & Antonio Griparić & 16.11.2021. 		\\[3pt] \hline
+			0.7 & Uspostavljena Baza podataka & Marko Damjanić & 16.11.2021. 		\\[3pt] \hline
 			
 			&  &  & \\[3pt] \hline	
 		\end{longtblr}
