--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -20,8 +20,10 @@
 			0.6 & Dodano u 3.11 : opis obrazaca uporabe & Antonio Griparić & 16.11.2021. 		\\[3pt] \hline
 			0.7 & Uspostavljena Baza podataka & Marko Damjanić & 16.11.2021. 		\\[3pt] \hline
 			0.8 & Dodano u 3.1.2 : Sekvencijski dijagrami & Luka Maros & 18.11.2021. 		\\[3pt] \hline
+			0.8.1 & Dodani ostali zahtjevi & Marko Damjanić & 18.11.2021 \\[3pt] \hline	
+			0.8.2 & Popravljena baza podataka & Marko Damjanić & 18.11.2021 \\[3pt] \hline	
 			
-			&  &  & \\[3pt] \hline	
+			
 		\end{longtblr}
 	
 	
