Popravljena imena slika

--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -21,7 +21,8 @@
 			0.7 & Uspostavljena Baza podataka & Marko Damjanić & 16.11.2021. 		\\[3pt] \hline
 			0.8 & Dodano u 3.1.2 : Sekvencijski dijagrami & Luka Maros & 18.11.2021. 		\\[3pt] \hline
 			0.8.1 & Dodani ostali zahtjevi & Marko Damjanić & 18.11.2021 \\[3pt] \hline	
-			0.8.2 & Popravljena baza podataka & Marko Damjanić & 18.11.2021 \\[3pt] \hline	
+			0.8.2 & Popravljena baza podataka & Marko Damjanić & 18.11.2021 \\[3pt] \hline
+			0.8.3 & Popravljena imena slika & Luka Maros & 18.11.2021 \\[3pt] \hline
 			
 			
 		\end{longtblr}
