--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -738,9 +738,21 @@
 					\end{packed_item}
 					
 				\subsubsection{Dijagrami obrazaca uporabe}
-					
-					\textit{Prikazati odnos aktora i obrazaca uporabe odgovarajućim UML dijagramom. Nije nužno nacrtati sve na jednom dijagramu. Modelirati po razinama apstrakcije i skupovima srodnih funkcionalnosti.}
-				\eject		
+							
+				\begin{figure}[H]
+					\includegraphics[width=\textwidth]{slike/DijagramObrascaUporabe1.jpeg}
+					\caption{Dijagram obrasca uporabe, funkcionalnost korisnika i natjecatelja}
+					\label{fig:dijaguporab1}
+				\end{figure}
+			\eject	
+
+			\begin{figure}[H]
+				\includegraphics[width=\textwidth]{slike/DijagramObrascaUporabe2.jpeg}
+				\caption{Dijagram obrasca uporabe, funkcionalnost voditelja i administratora}
+				\label{fig:dijaguporab2}
+			\end{figure}
+		\eject	
+		
 				
 			\subsection{Sekvencijski dijagrami}
 			
